style.css
.header-blue {
    background-color: #1d1f55;
    padding-top: 8px;
    padding-bottom: 8px;
    padding-left: 0px;
    padding-right: 0px;
}

.header-yellow {
    background-color: #fecd3e;
    padding-top: 8px;
    padding-bottom: 8px;
    padding-left: 0px;
    padding-right: 0px;
}

.header-red {
    background-color: #791914;
    padding-top: 0px;
    padding-bottom: 0px;
    padding-left: 0px;
    padding-right: 0px;
    display: flex;
    height: 100px;
    justify-content: center;
    align-items: center;
}

h1 {
    color: white;
    font: 2.875em "Nunito";
}

.airtable-embed {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 90%;
}

